--- a/UVa/Python/8195.md
+++ b/UVa/Python/8195.md
@@ -22,17 +22,119 @@ El Departamento de Obras Públicas ha calculado el coste de reparación de cada 
 Dada la descripción de las carreteras de Cubiconia, con sus respectivos costos de reparación, usted debe escribir un programa para responder a **un conjunto de consultas**. Para cada consulta se le dará una ruta específica que
 debe ser reparado, y debe determinar el costo mínimo de reparación de un conjunto de caminos (incluyendo el de manera que los cubicones puedan viajar entre cualquier par de ciudades usando solamente carreteras restauradas
 ### Input
-La primera línea contiene dos números enteros N (2 ≤ N ≤ N ≤ 10^5) y R (N-1 ≤ R ≤ 2 × 10^5), que representan respectivamente el número de ciudades y el número de carreteras en Cubiconia. Cada una de las siguientes líneas de la R describe una carretera con tres números enteros A, B (1 ≤ A < B ≤ N) y C (1 ≤ C ≤ 10^4), lo que indica que hay una carretera entre las ciudades A y B y que el coste de su reparación es C. Hay como máximo una carretera entre cada par de ciudades, y utilizando el comando carreteras existentes es posible viajar entre cualquier par de ciudades. La siguiente línea contiene un número entero Q (1 ≤ Q ≤ 10^5) que representa el número de consultas. Cada una de las siguientes líneas Q describe una consulta con dos números enteros U y V (1 ≤ U < V ≤ N), indicando la carretera específica que debe ser reparada. No hay
+La primera línea contiene dos números enteros N $(2 ≤ N ≤ N ≤ 10^5)$ y R $(N-1 ≤ R ≤ 2 × 10^5)$, que representan respectivamente el número de ciudades y el número de carreteras en Cubiconia. Cada una de las siguientes líneas de la R describe una carretera con tres números enteros A, B  $(1 ≤ A < B ≤ N)$ y C  $(1 ≤ C ≤ 10^4 )$ lo que indica que hay una carretera entre las ciudades **A** y **B** y que el coste de su reparación es **C**. Hay como máximo una carretera entre cada par de ciudades, y utilizando el comando carreteras existentes es posible viajar entre cualquier par de ciudades. La siguiente línea contiene un número entero Q $(1 ≤ Q ≤ 10^5)$ que representa el número de consultas. Cada una de las siguientes líneas Q describe una consulta con dos números enteros U y V $(1 ≤ U < V ≤ N)$, indicando la carretera específica que debe ser reparada. No hay
 consultas repetidas
 
 ### Output
 Por cada consulta el coste mínimo de reparación de un conjunto de carreteras (incluida la carretera en cuestión en la consulta)
 
-## Observacion
-Que **T** sea el Árbol de expansión mínima de un grafo G. Se puede observar que el segundo mejor Árbol de expansión mínima difiere de T por un solo reemplazo de arcos.
+## Observación
+### Qué es el segundo arbol de espansion minima
+Sea $T$  el Árbol de expansión mínima de un grafo $G$. Se puede observar que el segundo mejor Árbol de expansión mínima difiere de $T$ por un solo reemplazo de arcos.
 (Para una prueba de esta afirmación, consulte el problema 23-1 [aquí](http://www-bcf.usc.edu/~shanghua/teaching/Spring2010/public_html/files/HW2_Solutions_A.pdf)).
 
+### Qué se necesita encontrar
+
+Necesitamos encontrar un nuevo borde que no esté en $T$, y reemplazarlo con un arco en $T$ de tal forma que el nuevo arbol de expansión mínima del grafo $T′=(T∪{e_{new}})∖{e_{old}}$ sea un árbol que abarque todo y la diferencia de peso ($e_{new}-e_{old})$ sea mínima.
+
+### Qué sucede al intruducir un nuevo arco de en  $T$
+
+Sea $T$ un arbol de espansion minima de $G$, siendo  $T$  un grafo completamento conexo, es decir, hay un camino de aristas que una cualquier par de vértices.
+
+Ejemplos de un grafo convexo
+```mermaid
+graph TD
+A((1)) --- B((2))
+A --- C((3))
+C --- D((4)) 
+C --- E((5)) 
+id1>Cualquier nodo pueden llegar a cualquiero otro nodo]
+```
+Ejemplos de un grafo no convexo
+
+```mermaid
+graph TD
+A((1)) --- B((2))
+A --- C((3))
+C --- D((4)) 
+E((5)) 
+id1>no existe un path de algun nodo que llegue a 5]
+```
+
+Al hacer la operacion $T∪{e_{new}}$, denotando $e$ como un nuevo arco para el arbol $T$, nos  genera un ciclo por que este nuevo arco al intruducido a $T$ sería un [Cross Edge o un  Back Edge](#Tipos-de-arcos).
+
+
+```mermaid
+graph TB
+id>antes agregar el arco mst = 10]
+
+A((1)) --1--- B((2))
+A --2--- C((3))
+C --3--- D((4)) 
+C --4--- E((5)) 
+```
+
+```mermaid
+graph TB
+id2>despues de agregar arco  genera un grafo ciclico]
+F((1)) --1--- G((2))
+F --2--- H((3))
+H --3--- I((4)) 
+H --4--- J((5)) 
+I --6---J
+```
+Se pude evidenciar que el arbol $T$ se convierte un  grafo  $G'_{ciclico}$ sin embargo tenemos que eliminar un arco $G_{ciclico}$ para que asi sea nuevo un arbol $T'$, preferiblemente para este problema que estamos buscando el segundo arbol de espasion minima deberiamos que eliminar  el arco maximo(mayor peso) que ya estaba en $T$ antes de agregar $e_{new}$ concluyengo asi un nuevo valor para *MST*.
 
 ## Por qué este problema
+
+
 ## Posibles soluciones
+
+### Greedy
+##### Complejidad
+### Precalcular usando DFS
+##### Complejidad
+### LCA
+##### Complejidad
+
+
+
+## Tipos de arcos
+Los backEdge apuntan desde un nodo a uno de sus ancestros en el árbol.
+Los forward Edge apuntan desde un nodo a uno de sus descendientes.
+Los cross Edge apuntan desde un nodo a un nodo previamente visitado que no es ni un antepasado ni un descendiente.
+
+
+```mermaid
+graph TD
+A((1))
+B((2))
+C((3))
+D((4))
+E((5))
+F((6))
+G((7))
+H((8))
+I((9))
+J((10))
+K((11))
+L((12))
+
+A---B
+A---C
+B---D 
+B---E
+E---G
+E---H
+E---I
+C---J
+C---L
+L---K
+L---F
+L--forwardEdge---I
+K--croosEdge---I
+L --backEdge---A
+```
+
+
 
