--- a/UVa/Python/8195.md
+++ b/UVa/Python/8195.md
@@ -1,3 +1,5 @@
+
+# PARA VIZUALISAR MERJO ESTE .md [CLICK AQUI](https://stackedit.io)
 # 8196 - Imperial roads
 
 [8196 - Imperial roads](https://icpcarchive.ecs.baylor.edu/index.php?option=com_onlinejudge&Itemid=8&page=show_problem&category=&problem=6218&mosmsg=Submission+received+with+ID+2563018)
@@ -87,13 +89,43 @@ Se pude evidenciar que el arbol $T$ se convierte un  grafo  $G'_{ciclico}$ sin e
 
 ## Por qué este problema
 
-
+Es un problema clásico donde si no se hace adecuadamente el ejercicio puede tener muchos problemas por *TIME LIMIT*, Este es un ejercicio donde cotas del grafo $n$ y $m$, $n$ siendo la cantidad máxima de nodos y $m$ siento la máxima cantidad de arcos en el grafo, tienen demasiada importancia porque así podemos determinar que método de solución realizar, a demás este ejercicio nos brinda la oportunidad de aprender como recorrer un árbol adecuamente si se quieren hacer $Q$ queries.
 ## Posibles soluciones
 
 ### Greedy
+Este problema lo podemos solucionar greedy, la solucion es muy sencilla es guardar un identificador para arco descrito en la lista de arcos en el input del ejercicio y por cada $Q_{th}$  unir ese arco antes que los demás arcos al arbol $T$, no es una solución demasiado eficiente debido a:
 ##### Complejidad
+* El tiempo que se demora el algoritmo seria $O(Q* M*log_{N} + Nlog_{N} )$,  y complejidad espacial $O(M + Q*N)$, M por una lista de arcos incialmente y Q*N por la inicializacion del arreglo *P* y *R* del UnionFind
+
 ### Precalcular usando DFS
+Ejecute el Algoritmo de Kruskal de forma normal, guardando los bordes del arbol de espacion minimo puede ser como una lista de adyacencia   y guardar el valor MST del primer arbol de espancion minimo despues de 
+esto debemos precalcular maximo arco  entre el nodo $i_{th}$ y  el nodo $j_{th}$, ahora por cada $e_{new}$ para $T$ tenemos minimizar el costo del MST, que sería con la siguiente formula.
+ $$MST - maxEdge[u][v] + cost[u][v]$$
+$maxEdge[i][j] =$ maximo peso entre node i - j 
+$costo[i][j] =$ Es el costo  entre node i - j  incialmente
+
 ##### Complejidad
+* La complejidad de solucionar este ejercicio seria  $O(Q + N+M + Nlog_{m})$ y complejidad espacial $O(N*N + M + N)$
+##### Problemas de esta solucion
+* El problema más grande esta solucion es el espacion en memoria que necesitamos utilizar para precalcular $maxEdge$ entre $i - j$, asi mimos si el grafo es demasiado esperso la complejidad de la dfs puede salirnos costosa en tiempo.
+##### Implementacion de la matriz maxEdge
+```python
+	#in main function
+	global maxEdge
+	maxEdge = [ [ 0 for i in range(N)] for j in range(N)]
+	for nodes,listTree in enumerate(tree):
+		if listTree:
+		dfs(nodes,nodes,tree)
+	  
+	def dfs(src, u ,tree):
+		global maxEdge
+		for node in tree[u]:
+			if maxEdge[src][node.to] > 0:
+				continue
+			maxEdge[src][node.to] = max(maxEdge[src][u],node.w)
+			dfs(src,node.to,tree)
+```
+[Implementacion completa del ejercicio]([https://github.com/CrkJohn/CompetitiveProgramming/blob/master/UVa/Python/8196.py](https://github.com/CrkJohn/CompetitiveProgramming/blob/master/UVa/Python/8196.py))
 ### LCA
 ##### Complejidad
 
@@ -135,6 +167,3 @@ L--forwardEdge---I
 K--croosEdge---I
 L --backEdge---A
 ```
-
-
-
