--- a/UVa/Python/8195.md
+++ b/UVa/Python/8195.md
@@ -1,5 +1,5 @@
 
-# PARA VIZUALISAR MERJO ESTE .md [CLICK AQUI](https://stackedit.io)
+# PARA VIZUALISAR MEJOR ESTE .md [CLICK AQUI](https://stackedit.io)
 # 8196 - Imperial roads
 
 [8196 - Imperial roads](https://icpcarchive.ecs.baylor.edu/index.php?option=com_onlinejudge&Itemid=8&page=show_problem&category=&problem=6218&mosmsg=Submission+received+with+ID+2563018)
